--- a/GitTest/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GitTest/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-GitTest.TimeStamp=2016.01.13-22.26.36
+GitTest.TimeStamp=2016.01.14-04.43.10
 GitTest.LastCompileMethod=Runtime
 PakFile.TimeStamp=2016.01.06-10.12.10
 PakFile.LastCompileMethod=Unknown
@@ -589,9 +589,15 @@ HOTRELOADED_PawnWithCamera_2.Camera=True
 HOTRELOADED_PawnWithCamera_2.Rendering=True
 HOTRELOADED_PawnWithCamera_2.Input=True
 HOTRELOADED_PawnWithCamera_2.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
 
 [DetailPropertyExpansion]
-InputSettings="Object.Bindings.AxisMappings.AxisMappings[9]" 
+InputSettings=Object.Bindings.AxisMappings.AxisMappings[9]
 Object=
 
 [DetailCustomWidgetExpansion]
