--- a/GitTest/Config/DefaultEngine.ini
+++ b/GitTest/Config/DefaultEngine.ini
@@ -1,3 +1,4 @@
+
 [/Script/Engine.CollisionProfile]
 +Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles",bCanModify=True)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
@@ -16,11 +17,11 @@ ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/GitTest.GitTestGameMode
 GlobalDefaultServerGameMode=None
 
-
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/GitTest")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/GitTest")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/GitTest")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/GitTest")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="GitTestProjectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="GitTestHUD")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="GitTestGameMode")
