--- a/Shotgun_Prototype/Config/DefaultEngine.ini
+++ b/Shotgun_Prototype/Config/DefaultEngine.ini
@@ -10,12 +10,15 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/GI_SGGPrototype.GI_SGGPrototype_C
 GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/Shotgun_Prototype.GM_ShotgunPrototype
 GlobalDefaultServerGameMode=None
 
+
+[OnlineSubsystem]
+DefaultPlatformService=Null
 
 
 [/Script/Engine.Engine]
