--- a/Shotgun_Prototype/Config/DefaultEditor.ini
+++ b/Shotgun_Prototype/Config/DefaultEditor.ini
@@ -6,3 +6,27 @@ bAllowClassAndBlueprintPinMatching=true
 bReplaceBlueprintWithClass= true
 bDontLoadBlueprintOutsideEditor= true
 bBlueprintIsNotBlueprintType= true
+
+[/Script/UnrealEd.EditorProjectAppearanceSettings]
+bDisplayUnits=True
+-DistanceUnits=EUnit::Centimeters
+-DistanceUnits=Centimeters
++DistanceUnits=Centimeters
+-MassUnits=EUnit::Kilograms
+-MassUnits=Kilograms
+-MassUnits=Stones
++MassUnits=Kilograms
+-TimeUnits=EUnit::Seconds
+-TimeUnits=EUnit::Minutes
+-TimeUnits=Seconds
+-TimeUnits=Minutes
++TimeUnits=Seconds
++TimeUnits=Minutes
+AngleUnits=Degrees
+SpeedUnits=MetersPerSecond
+TemperatureUnits=Celsius
+ForceUnits=Newtons
+UnitDisplay=Invalid
+DefaultInputUnits=Invalid
+
+
