Set up most of the main menu structure. Mostly just need to get it to actually start matches

--- a/Shotgun_Prototype/Config/DefaultEngine.ini
+++ b/Shotgun_Prototype/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/GI_SGGPrototype.GI_SGGPrototype_C
 GameDefaultMap=/Game/FirstPersonCPP/Maps/Lobby
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/Shotgun_Prototype.GM_ShotgunPrototype
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
 
 
@@ -82,4 +82,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
-
