--- a/Shotgun_Prototype/Config/DefaultEngine.ini
+++ b/Shotgun_Prototype/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/GI_SGGPrototype.GI_SGGPrototype_C
-GameDefaultMap=/Game/FirstPersonCPP/Maps/Lobby
+GameDefaultMap=/Game/FirstPersonCPP/Maps/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
