.. Got Menu Scene working properly -- Removed a retargeted animation that was breaking the build

--- a/Shotgun_Prototype/Config/DefaultEngine.ini
+++ b/Shotgun_Prototype/Config/DefaultEngine.ini
@@ -6,7 +6,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/GI_SGGPrototype.GI_SGGPrototype_C
-GameDefaultMap=/Game/FirstPersonCPP/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/FirstPersonCPP/Maps/Menu.Menu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
@@ -143,5 +143,4 @@ UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtra
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
-
 
